--- a/src/app/project/grapesjs-editor/grapesjs-editor.component.html
+++ b/src/app/project/grapesjs-editor/grapesjs-editor.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%; background-color: #474747; padding: 2px" class="text-right">
+<div style="width: 100%; padding: 2px">
   <button (click)="saveNewVersion()" class="btn btn-success btn-lg">Save Prototype</button>
 </div>
 <div id="gjs"></div>
