fixed maitainer screen creation

--- a/src/app/project/feedback/feedback.component.html
+++ b/src/app/project/feedback/feedback.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="project" class="container">
   <las2peer-comment-widget
   id="comments"
   [baseUrl]="serviceNode"
