--- a/src/app/projects/new-project/new-project.component.html
+++ b/src/app/projects/new-project/new-project.component.html
@@ -13,10 +13,12 @@
       <label for="description">Description</label>
       <input type="text" class="form-control" id="description" [(ngModel)]="project.description" name="projectDescription">
     </div>
-    <!--<div class="form-group">
-      <label for="image">Cover Image</label>
-      <input type="file" class="form-control-file" id="image" aria-describedby="fileHelp" [(ngModel)]="project.image" name="ProjectImage">
-    </div>-->
+    <div class="form-group">
+      <label for="organization">Organization</label>
+      <select class="form-control" id="organization" [(ngModel)]="project.githubRepoOwner" name="ProjectRepository">
+        <option value="rwth-i5-pharos" selected>rwth-i5-pharos</option>
+      </select>
+    </div>
     <button class="btn btn-success" (click)="onSubmit()">Create</button>
     <button class="btn" (click)="onCancel()">Cancel</button>
   </form>
