--- a/src/app/projects/new-project/new-project.component.html
+++ b/src/app/projects/new-project/new-project.component.html
@@ -14,7 +14,7 @@
       <input type="text" class="form-control" id="description" [(ngModel)]="project.description" name="projectDescription">
     </div>
     <div class="form-group">
-      <label for="organization">Organization</label>
+      <label for="organization">GitHub Organization</label>
       <select class="form-control" id="organization" [(ngModel)]="project.githubRepoOwner" name="ProjectRepository">
         <option value="rwth-i5-pharos" selected>rwth-i5-pharos</option>
       </select>
