--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -17,7 +17,7 @@
       <button *ngIf="githubSignedIn && isMaintainer" class="btn delete" (click)="deleteProject(project)" style="width: 18px; height: 22px; float: right; background-size: 18px 20px;"></button>
     </div>
     <div class="card-footer text-muted">
-      Created by: {{project.createdBy}}
+      GitHub Organization: {{project.createdBy}}
     </div>
   </div>
 </div>
