--- a/src/app/project/screen/screen.component.html
+++ b/src/app/project/screen/screen.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="screen" class="tab_content">
   <h1>{{screen.name}}</h1>
 
-  <div *ngIf="selectedTab === 'Preview'">
+  <div [hidden]="selectedTab != 'Preview'">
     <div *ngIf="screen.type === 'image'">
       <div class="text-right">
         <button *ngIf="githubSignedIn" (click)="saveNewImageVersion()" class="btn btn-success btn-lg">Upload New Image</button>
